--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "docusaurus-theme-nupes",
-  "version": "0.0.10",
+  "version": "0.0.16",
   "description": "A Docusaurus v2 plugin with NUPES design system",
   "main": "lib/index.js",
   "repository": "git@github.com:arthurlenoir/docusaurus-theme-nupes.git",
@@ -23,7 +23,7 @@
     "watch": "tsc --watch"
   },
   "keywords": [
-    "docusarus",
+    "docusaurus",
     "nupes"
   ],
   "peerDependencies": {
@@ -38,6 +38,7 @@
     "@types/node": "^17.0.35",
     "@types/react": "17.0.2",
     "@types/react-dom": "17",
+    "@types/tinycolor2": "^1.4.3",
     "chokidar": "^3.5.3",
     "fs-extra": "^10.1.0",
     "prettier": "^2.6.2",
@@ -47,6 +48,7 @@
   },
   "dependencies": {
     "@docusaurus/core": "^2.0.0-beta.20",
+    "@docusaurus/preset-classic": "^2.0.0-beta.20",
     "@docusaurus/theme-classic": "^2.0.0-beta.20",
     "@docusaurus/theme-common": "^2.0.0-beta.20",
     "@docusaurus/theme-translations": "^2.0.0-beta.20",
@@ -54,6 +56,7 @@
     "@docusaurus/utils": "^2.0.0-beta.20",
     "@mdx-js/react": "^1",
     "clsx": "^1.1.1",
-    "nupes-ui": "^0.0.32"
+    "nupes-ui": "^0.0.32",
+    "tinycolor2": "^1.4.2"
   }
 }
