--- a/example/package.json
+++ b/example/package.json
@@ -18,16 +18,19 @@
     "@docusaurus/core": "2.0.0-beta.20",
     "@docusaurus/preset-classic": "2.0.0-beta.20",
     "@mdx-js/react": "^1.6.22",
+    "assert": "^2.0.0",
+    "child_process": "^1.0.2",
     "clsx": "^1.1.1",
-    "docusaurus-theme-nupes": "^0.0.16",
+    "docusaurus-theme-nupes": "^0.0.27",
     "prism-react-renderer": "^1.3.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
-    "@docusaurus/module-type-aliases": "2.0.0-beta.20",
+    "@docusaurus/module-type-aliases": "^2.0.0-beta.20",
     "@tsconfig/docusaurus": "^1.0.5",
-    "typescript": "^4.6.4"
+    "typescript": "^4.6.4",
+    "typings-for-css-modules-loader": "^1.7.0"
   },
   "browserslist": {
     "production": [
