--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "docusaurus-theme-nupes",
-  "version": "0.0.16",
+  "version": "0.0.27",
   "description": "A Docusaurus v2 plugin with NUPES design system",
   "main": "lib/index.js",
   "repository": "git@github.com:arthurlenoir/docusaurus-theme-nupes.git",
@@ -38,6 +38,7 @@
     "@types/node": "^17.0.35",
     "@types/react": "17.0.2",
     "@types/react-dom": "17",
+    "@types/styled-components": "^5.1.25",
     "@types/tinycolor2": "^1.4.3",
     "chokidar": "^3.5.3",
     "fs-extra": "^10.1.0",
@@ -56,7 +57,7 @@
     "@docusaurus/utils": "^2.0.0-beta.20",
     "@mdx-js/react": "^1",
     "clsx": "^1.1.1",
-    "nupes-ui": "^0.0.32",
+    "nupes-ui": "^0.0.34",
     "tinycolor2": "^1.4.2"
   }
 }
